--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Gog Said ❝Boulder-Stump❞</title>
+    <title>Gog Said &#8220;Boulder-Stump&#8221;</title>
   </head>
   <body>
     <h3>Ado</h3>
-    <p>Hi. Welcome to my terrible web page about my awesome book <em>Gog Said ❝Boulder-Stump❞</em>
+    <p>Hi. Welcome to my terrible web page about my awesome book <em>Gog Said &#8220;Boulder-Stump&#8221;</em>
     </p>
     <p>It's silly. <em>I</em> am silly. Relax, bro. We all need a good mocking.
     </p>
     <p>
-      Doing my honest level best to be objective and calibrated about my own abilities, I would say that this book is varaious parts...
+      Doing my honest level best to be objective and calibrated about my own abilities, I would say that this book is various parts of...
     </p>
     <ul>
       <li>Discworld</li>
@@ -33,7 +33,7 @@
       Also feel free to send hate mail: <a href="mailto:mb+gog@unintuitive.org">mb+gog@unintuitive.org</a>
     </p>
     <h3>The Book</h3>
-    <h4>Gog Said ❝Boulder-Stump❞</h4>
+    <h4>Gog Said &#8220;Boulder-Stump&#8221;</h4>
     <a href="001.html">Chapter One: Verk Sends a Message</a> <br /><!-- Abuse! It's abuse, I tell ya!" -->
     <a href="002.html">Chapter One: A Miraculous Find</a> <br />
   </body>
