--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h3>Ado</h3>
-    <p>Hi. Welcome to my terrible web page about my awesome book <em>Gog Said &#8220;Boulder-Stump&#8221;</em>
+    <p>Hi. Welcome to my terrible web page about my awesome book entitled, <strong><em>Gog Said &#8220;Boulder-Stump&#8221;</em></strong>
     </p>
     <p>It's silly. <em>I</em> am silly. Relax, bro. We all need a good mocking.
     </p>
