--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </ul>
     <p>You get it. Nothing special.</p>
     <p>
-      <code>&#x1F6A7;add summary here1&#x1F6A7;</code>
+      <code>&#x1F6A7;add summary here1&#x1F6A7;</code> <br />
       So far I've just been spraying out other content. Will get around to it. And a proper prolog, probably. And all kinds of restructuring.</p>
     <p>A GitHub repo that corresponds more or less to this content is here. And I totally will take fucking pull requests. I'll make all kinds of opinionated changes until it's unrecognizable, take credit for it definitely remember to thank you.
     </p>
