--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <p>I guess it's a "living document". May there not be a bunch of idiotic contraversy about "Chapter II". Relax, dummies.</p>
     <p>I also have a lot of terrifically random content <a href="https://mburr.bearblog.dev/blog/">here</a>, <a href="https://www.publish0x.com/@captainmidday">here</a> and <a href="https://www.reddit.com/user/captainmidday">here</a>. Judge not, lest I un-friend you and pout.</p>
     <p>
-      You may drop me hella phat coins at Ether address <code>0xafe8d48DeFC7B96912C638C8900CB71dDB1acEC4</code> (<a href="ipfs://mikeburr.eth">ipfs://mikeburr.eth</a>) or Bitcoin address <code>3GddsDmdPUqV9fzdtp6w1heqFaMLBpcTtF</code> (wherever you like, I'll figure it out. <code>#gobless</code>)
+      You may drop me hella phat coins at Ethereum address <code>0xafe8d48DeFC7B96912C638C8900CB71dDB1acEC4</code> (<a href="ipfs://mikeburr.eth">ipfs://mikeburr.eth</a>) or Bitcoin address <code>3GddsDmdPUqV9fzdtp6w1heqFaMLBpcTtF</code> (wherever you like, I'll figure it out. <code>#gobless</code>)
+    </p>
+    <p>
       Also feel free to send hate mail: <a href="mailto:mb+gog@unintuitive.org">mb+gog@unintuitive.org</a>
     </p>
     <h3>The Book</h3>
