--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <p>
       Also feel free to send hate mail: <a href="mailto:mb+gog@unintuitive.org">mb+gog@unintuitive.org</a>
     </p>
-    <h3>The Book</h3>
+    <h1>The Book!</h1>
     <h4>Gog Said &#8220;Boulder-Stump&#8221;</h4>
     <a href="001.html">Chapter One: Verk Sends a Message</a> <br /><!-- Abuse! It's abuse, I tell ya!" -->
     <a href="002.html">Chapter One: A Miraculous Find</a> <br />
