--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h4>Gog Said &#8220;Boulder-Stump&#8221;</h4>
     <a href="001.html">Chapter One: Verk Sends a Message</a> <br /><!-- Abuse! It's abuse, I tell ya!" -->
     <a href="002.html">Chapter One: A Miraculous Find</a> <br />
-    <a href="Appendix.html">Appendix</a>: A very loosely structured "appendix" including a partial glossary.
+    <a href="Appendix.html">Appendix</a>: A very loosely structured "appendix" including a partial glossary.<br />
     <a href="Spoilers.html">Spoilers</a>: I don't have any reason to have super-secret spoilers just yet. If you want <em>no</em> spoilers then do <em>not</em> lick that &#128072;! 
   </body>
 </html>
