--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p>
       <code>&#x1F6A7;add summary here1&#x1F6A7;</code> <br />
       So far I've just been spraying out other content. Will get around to it. And a proper <em>preface</em>, probably. And all kinds of restructuring.</p>
-    <p>A GitHub repo that corresponds more or less to this content is <a href="https://github.com/stnbu/boulder-stump">here</a>. And I totally will take fucking pull requests. I'll make all kinds of opinionated changes until it's unrecognizable, take credit for it definitely remember to thank you.
+    <p>A GitHub repo that corresponds more or less to this content is <a href="https://github.com/stnbu/boulder-stump">here</a>. And I totally will take fucking pull requests. I'll make all kinds of opinionated changes until it's unrecognizable, take credit for it, and definitely remember to thank you.
     </p>
     <p>I guess it's a "living document". May there not be a bunch of idiotic controversy about "Chapter II".</p>
     <p>I also have a lot of terrifically random content <a href="https://mburr.bearblog.dev/blog/">here</a>, <a href="https://www.publish0x.com/@captainmidday">here</a> and <a href="https://www.reddit.com/user/captainmidday">here</a>. Judge not, lest I un-friend you and pout.</p>
