--- a/index.html
+++ b/index.html
@@ -23,25 +23,37 @@
       <li>Monty Python</li>
       <li>American History X</li>
     </ul>
-    <p>You get it. Nothing special.</p>
+    <p>
+      You get it. Nothing special.
+    </p>
     <p>
       <code>&#x1F6A7;add summary here1&#x1F6A7;</code> <br />
-      So far I've just been spraying out other content. Will get around to it. And a proper <em>preface</em>, probably. And all kinds of restructuring.</p>
-    <p>A GitHub repo that corresponds more or less to this content is <a href="https://github.com/stnbu/boulder-stump">here</a>. And I totally will take fucking pull requests. I'll make all kinds of opinionated changes until it's unrecognizable, take credit for it, and definitely remember to thank you.
+      So far I've just been spraying out other content. Will get around to it. And a proper <em>preface</em>, probably. And all kinds of restructuring.
     </p>
-    <p>I guess it's a "living document". May there not be a bunch of idiotic controversy about "Chapter II".</p>
-    <p>I also have a lot of terrifically random content <a href="https://mburr.bearblog.dev/blog/">here</a>, <a href="https://www.publish0x.com/@captainmidday">here</a> and <a href="https://www.reddit.com/user/captainmidday">here</a>. Judge not, lest I un-friend you and pout.</p>
+    <p>
+      A GitHub repo that corresponds more or less to this content is <a href="https://github.com/stnbu/boulder-stump">here</a>. And I totally will take fucking pull requests. I'll make all kinds of opinionated changes until it's unrecognizable, take credit for it, and definitely remember to thank you.
+    </p>
+    <p>
+      I guess it's a "living document". May there not be a bunch of idiotic controversy about "Chapter II".
+    </p>
+    <p>
+      I also have a lot of terrifically random content <a href="https://mburr.bearblog.dev/blog/">here</a>, <a href="https://www.publish0x.com/@captainmidday">here</a> and <a href="https://www.reddit.com/user/captainmidday">here</a>. Judge not, lest I un-friend you and pout.
+    </p>
     <p>
       You may drop me hella phat coins at
     </p>
-      <ul>
-	<li>Ethereum address <code>0xafe8d48DeFC7B96912C638C8900CB71dDB1acEC4</code> (<a href="ipfs://mikeburr.eth">ipfs://mikeburr.eth</a>)</li>
-	<li>Bitcoin address <code>3GddsDmdPUqV9fzdtp6w1heqFaMLBpcTtF</code></li>
-Side chains, shitchains, L2's... wherever you like, I'll figure it out. <code>#gobless</code>
-      </ul>
+    <ul>
+      <li>Ethereum address <code>0xafe8d48DeFC7B96912C638C8900CB71dDB1acEC4</code> (<a href="ipfs://mikeburr.eth">ipfs://mikeburr.eth</a>)</li>
+      <li>Bitcoin address <code>3GddsDmdPUqV9fzdtp6w1heqFaMLBpcTtF</code></li>
+
+    </ul>
+    <p>
+      Side chains, shitchains, L2's... wherever you like, I'll figure it out. <code>#gobless</code>
+    </p>
     <p>
       Also feel free to send hate mail: <a href="mailto:mb+gog@unintuitive.org">mb+gog@unintuitive.org</a>
     </p>
+    
     <h1>The Book!</h1>
     <h4>Gog Said &#8220;Boulder-Stump&#8221;</h4>
     <a href="001.html">Chapter One: Verk Sends a Message</a> <br /><!-- Abuse! It's abuse, I tell ya!" -->
