--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Gog Said &#8220;Boulder-Stump&#8221;</title>
+    <link rel="stylesheet" type="text/css" href="index.css" />
   </head>
   <body>
     <h3>Ado</h3>
