--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     </ul>
     <p>
-      Side chains, shitchains, L2's, cliquey hardforks... wherever you like, I'll figure it out. <code>#gobless</code>
+      ...sidechains, shitchains, L2's, cliquey hardforks... wherever you like, I'll figure it out. <code>#gobless</code>
     </p>
     <p>
       Also feel free to send hate mail: <a href="mailto:mb+gog@unintuitive.org">mb+gog@unintuitive.org</a>
