--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       So far I've just been spraying out other content. Will get around to it. And a proper <em>preface</em>, probably. And all kinds of restructuring.
     </p>
     <p>
-      A GitHub repo that corresponds more or less to this content is <a href="https://github.com/stnbu/boulder-stump">here</a>. And I totally will take fucking pull requests. I'll make all kinds of opinionated changes until it's unrecognizable, take credit for it, and definitely remember to thank you.
+      A GitHub repo that corresponds more or less to this content is <a href="https://github.com/stnbu/boulder-stump">here</a>. And I totally will <em>totally</em> take rock-stick pull requests. I'll make all kinds of opinionated changes until it's unrecognizable, take credit for it, and definitely remember to thank you.
     </p>
     <p>
       I guess it's a "living document". May there not be a bunch of idiotic controversy about "Chapter II".
