--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       I guess it's a "living document". May there not be a bunch of idiotic controversy about "Chapter II".
     </p>
     <p>
-      I also have a lot of terrifically random content <a href="https://mburr.bearblog.dev/blog/">here</a>, <a href="https://www.publish0x.com/@captainmidday">here</a> and <a href="https://www.reddit.com/user/captainmidday">here</a>. Judge not, lest I un-friend you and pout.
+      I also have a lot of terrifically random content <a href="https://mburr.bearblog.dev/blog/">here</a>, <a href="https://www.publish0x.com/@captainmidday">here</a> and <a href="https://www.reddit.com/user/captainmidday">here</a>. Judge not, lest I un-friend you and sulk!
     </p>
     <p>
       You may drop me hella phat coins at
