--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       You may drop me hella phat coins at
     </p>
     <ul>
-      <li>Ethereum address <a href="ethereum:pay-0xafe8d48DeFC7B96912C638C8900CB71dDB1acEC4">0xafe8d48DeFC7B96912C638C8900CB71dDB1acEC4</a> (<a href="ipfs://mikeburr.eth">ipfs://mikeburr.eth</a>)</li>
-      <li>Bitcoin address <a href="bitcoin:3GddsDmdPUqV9fzdtp6w1heqFaMLBpcTtF">bitcoin:3GddsDmdPUqV9fzdtp6w1heqFaMLBpcTtF</a></li>
+      <li>Ethereum address <code><a href="ethereum:pay-0xafe8d48DeFC7B96912C638C8900CB71dDB1acEC4">0xafe8d48DeFC7B96912C638C8900CB71dDB1acEC4</a></code> (<a href="ipfs://mikeburr.eth">ipfs://mikeburr.eth</a>)</li>
+      <li>Bitcoin address <code><a href="bitcoin:3GddsDmdPUqV9fzdtp6w1heqFaMLBpcTtF">3GddsDmdPUqV9fzdtp6w1heqFaMLBpcTtF</a></code></li>
     </ul>
     <p>
       ...sidechains, shitchains, L2's, cliquey hardforks... wherever you like, I'll figure it out. <code>#gobless</code>
