--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" type="text/css" href="index.css" />
   </head>
   <body>
+    <!-- I do not give one flying fuck about "proper html". Do ya' heer!? I am done with that. /You/ fix it. -->
+    <pre style="font-size: 150%;">
+      parablebolic (adj) - A story with parable qualities but with upturned ends where the overly-yin and overly-yang parts lie.
+    </pre>
     <h3>Ado</h3>
     <p>Welcome to my terrible web page about my awesome book entitled, <strong><em>Gog Said &#8220;Boulder-Stump&#8221;</em></strong>
     </p>
