--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <h4>Gog Said &#8220;Boulder-Stump&#8221;</h4>
     <a href="001.html">Chapter One: Verk Sends a Message</a> <br /><!-- Abuse! It's abuse, I tell ya!" -->
     <a href="002.html">Chapter Two: A Miraculous Find</a> <br />
+    <a href="003.html">Chapter Tree: Thag</a> <br />
     <a href="Appendix.html">Appendix</a>: A very loosely structured "appendix" including a partial glossary.<br />
     <a href="Spoilers.html">Spoilers</a>: I don't have any reason to have super-secret spoilers just yet. If you want <em>no</em> spoilers then do <em>not</em> click tha link!!
   </body>
