--- a/003.html
+++ b/003.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-09-10 Fri 08:01 -->
+<!-- 2021-09-10 Fri 08:02 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Thag</title>
@@ -237,7 +237,7 @@ Given enough cavemen, you will find some outliers. You may not know anyone who l
 </p>
 
 <p>
-As a Crec, you could and probably would some day be drafted. But to make a career out of it was a different tack. If drafted and not a CO, you pretty much spent all your time either killing, being killed, or learning to kill. CO's were more the managerial type.
+As a Crec you could and probably would some day be drafted. But to make a career out of it was a different tack. If drafted and not a CO, you pretty much spent all your time either killing, being killed, or learning to kill. CO's were more the managerial type.
 </p>
 
 <p>
@@ -496,9 +496,9 @@ The toddler's eyes made saucers. He pointed at Grav and jumped rapidly with bent
 Lizard-bird could and would kill men. There was no scooping up in the beak and swallowing whole. No, that would be a better fate. Someone from theirs and others' childhood shared-experience was quite impactful in their respect for lizard-bird.
 </p>
 
-<div id="outline-container-org82d6ed3" class="outline-2">
-<h2 id="org82d6ed3">Caveman Thag</h2>
-<div class="outline-text-2" id="text-org82d6ed3">
+<div id="outline-container-org33e0e0a" class="outline-2">
+<h2 id="org33e0e0a">Caveman Thag</h2>
+<div class="outline-text-2" id="text-org33e0e0a">
 <p>
 One rare survivor, beginning generations ago and up to the present day<sup><a id="fnr.22" class="footref" href="#fn.22">22</a></sup> would enthusiastically, and quite regularly share his story just for the greater good of the Forest<sup><a id="fnr.23" class="footref" href="#fn.23">23</a></sup>.
 </p>
@@ -1017,7 +1017,7 @@ Thag made his most enthusiastic wave goodbye. His one arm being a disproportiona
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: Michael Burr</p>
-<p class="date">Created: 2021-09-10 Fri 08:01</p>
+<p class="date">Created: 2021-09-10 Fri 08:02</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
