--- a/003.html
+++ b/003.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-09-10 Fri 08:44 -->
+<!-- 2021-09-10 Fri 08:45 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Thag</title>
@@ -500,9 +500,9 @@ The toddler's eyes made saucers. He pointed at Grav and jumped rapidly with bent
 Lizard-bird could and would kill men. There was no scooping up in the beak and swallowing whole. No, that would be a better fate. Someone from theirs and others' childhood shared-experience was quite impactful in their respect for lizard-bird.
 </p>
 
-<div id="outline-container-org00f3991" class="outline-2">
-<h2 id="org00f3991">Caveman Thag</h2>
-<div class="outline-text-2" id="text-org00f3991">
+<div id="outline-container-org86b1041" class="outline-2">
+<h2 id="org86b1041">Caveman Thag</h2>
+<div class="outline-text-2" id="text-org86b1041">
 <p>
 One rare survivor, beginning generations ago and up to the present day<sup><a id="fnr.23" class="footref" href="#fn.23">23</a></sup> would enthusiastically, and quite regularly share his story just for the greater good of the Forest<sup><a id="fnr.24" class="footref" href="#fn.24">24</a></sup>.
 </p>
@@ -960,7 +960,7 @@ Thag made his most enthusiastic wave goodbye. His one arm being a disproportiona
 
 <div class="footdef"><sup><a id="fn.8" class="footnum" href="#fnr.8">8</a></sup> <div class="footpara"><p class="footpara">And coming back was also a nice, slow 'hello'. You felt 'home' many palm before you actually were.</p></div></div>
 
-<div class="footdef"><sup><a id="fn.9" class="footnum" href="#fnr.9">9</a></sup> <div class="footpara"><p class="footpara">While "comedy" in Crec was not recognized as an art form, much less a profession, certain people were marked as cut-ups and some were clearly gifted in the art of inducing laughter. To the extent that it existed, comedy in Crec was always of the physical sort and therefore often employed a stick. One could use a stick to rap another over the head, as a way to punctuate observations about their ineptness. One could use a stick to trip another, causing an often bloody spill that was sure to snare onlookers. Therefore, one's "signature" in a comedy performance sense as referred to as one's "stick".</p></div></div>
+<div class="footdef"><sup><a id="fn.9" class="footnum" href="#fnr.9">9</a></sup> <div class="footpara"><p class="footpara">While "comedy" in Crec was not recognized as an art form, much less a profession, certain people were marked as cut-ups and some were clearly gifted in the art of inducing laughter. To the extent that it existed, comedy in Crec was always of the physical sort and therefore often employed a stick. One could use a stick to rap another over the head, as a way to punctuate observations about their ineptness. One could use a stick to trip another, causing an often bloody spill that was sure to snare onlookers into laughter. Therefore, one's "signature" in a comedy performance sense as referred to as one's "stick".</p></div></div>
 
 <div class="footdef"><sup><a id="fn.10" class="footnum" href="#fnr.10">10</a></sup> <div class="footpara"><p class="footpara">explain!!</p></div></div>
 
@@ -1023,7 +1023,7 @@ Thag made his most enthusiastic wave goodbye. His one arm being a disproportiona
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: Michael Burr</p>
-<p class="date">Created: 2021-09-10 Fri 08:44</p>
+<p class="date">Created: 2021-09-10 Fri 08:45</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
